# bootstrap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.e2e  README.md  justfile
adapters/jvm/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
adapters/jvm/launcher/: build.gradle.kts
adapters/jvm/mud-mop-jvm/: build.gradle.kts
adapters/jvm/stdlib/: build.gradle.kts
adapters/lpc/: Cargo.toml
adapters/lpc/src/: main.rs
adapters/lpc/templates/area/lpc/: agents.md
adapters/lpc/templates/area/lpc/daemons/: area_daemon.c
adapters/lpc/templates/area/lpc/rooms/: hall.c
adapters/lpc/templates/area/lpc/web-spa/src/: package.json
adapters/lpc/templates/area/rust/: agents.md  mud.yaml
adapters/lpc/templates/area/rust/rooms/: entrance.rs
adapters/ruby/: Gemfile  mud-adapter.gemspec
adapters/ruby/lib/: mud_adapter.rb
adapters/ruby/lib/mud_adapter/: area_loader.rb  area_logger.rb  client.rb  container.rb  session_handler.rb  stdlib.rb  stdlib_runtime.rb  web_server.rb
adapters/ruby/test/: access_control_test.rb  portal_base_app_test.rb  web_data_helpers_test.rb
bootstrap/ruby/stdlib/: player.rb
bootstrap/ruby/stdlib/commands/: builder.rb  parser.rb
bootstrap/ruby/stdlib/config/: repo_policy.yml
crates/lpc-vm/: Cargo.toml
crates/lpc-vm/src/: ast.rs  bytecode.rs  compiler.rs  dynmod.rs  lib.rs  object.rs  parser.rs  preprocessor.rs  scheduler.rs  vm.rs
crates/lpc-vm/tests/: kfun_tests.rs  lexer_tests.rs  object_tests.rs  parser_tests.rs  preprocessor_tests.rs  scheduler_tests.rs  vm_integration_tests.rs
crates/mud-core/: Cargo.toml
crates/mud-core/src/: types.rs
crates/mud-driver/: Cargo.toml
crates/mud-driver/git-server/alice/: alice.git.acl.yml
crates/mud-driver/git-server/alice/alice.git/refs/heads/: main
crates/mud-driver/src/: config.rs  lib.rs  main.rs  mop_rpc.rs  server.rs
crates/mud-driver/src/git/: branch_protection.rs  merge_request_manager.rs  mod.rs  repo_manager.rs  workspace.rs
crates/mud-driver/src/persistence/: ai_key_store.rs  credential_encryptor.rs  database_manager.rs  merge_request_store.rs  migrations.rs  mod.rs  player_store.rs
crates/mud-driver/src/runtime/: adapter_connection.rs  adapter_manager.rs  mod.rs  object_broker.rs  state_store.rs  version_tree.rs
crates/mud-driver/src/ssh/: handler.rs  server.rs
crates/mud-driver/src/web/: ai.rs  build_log.rs  build_manager.rs  editor_files.rs  git_http.rs  mod.rs  project.rs  repos.rs  server.rs  session.rs  skills.rs  static_files.rs
crates/mud-driver/src/web/ai_providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/mud-driver/src/web/templates/: layout.html  welcome.html
crates/mud-driver/tests/: account_auth_test.rs  adapter_manager_test.rs  build_log_test.rs  build_manager_test.rs  config_integration_test.rs  editor_files_test.rs  full_stack_e2e_test.rs  git_workflow_test.rs  http_git_test.rs  object_broker_tests.rs  portal_builder_e2e_test.rs  portal_default_area_e2e_test.rs  portal_e2e_test.rs  portal_full_e2e_test.rs  portal_git_ops_e2e_test.rs  portal_play_e2e_test.rs  portal_webapp_e2e_test.rs  project_routes_test.rs  ruby_adapter_e2e_test.rs  server_e2e_test.rs  state_store_tests.rs  version_tree_tests.rs
crates/mud-e2e/: Cargo.toml
crates/mud-e2e/src/: harness.rs
crates/mud-e2e/tests/: access_control.rs  account_lifecycle.rs  ai_streaming.rs  builder_webapp.rs  editor_operations.rs  game_session.rs  git_workflow.rs  jvm_adapter.rs  lpc_adapter.rs  spa_build.rs  stdlib_lifecycle.rs  webapp_database.rs
crates/mud-mop/: Cargo.toml
crates/mud-mop/src/: codec.rs  message.rs
crates/mud-mop/tests/: integration_test.rs  new_messages_tests.rs
docs/: architecture.md  missing-test-scenarios.md  stdlib-refactor-plan.md
docs/plans/: 2026-03-09-area-templates-design.md  2026-03-09-area-templates-plan.md  2026-03-09-jvm-adapter-design.md  2026-03-09-jvm-adapter-plan.md  2026-03-09-kfun-implementation-plan.md  2026-03-09-rust-lpc-adapter-design.md  2026-03-09-rust-lpc-adapter-plan.md
(+127 files in other folders)
