[workspace]
resolver = "2"
members = [
    "crates/mud-core",
    "crates/mud-driver",
    "crates/mud-mop",
    "crates/mud-e2e",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
bcrypt = "0.16"
hex = "0.4"
git2 = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-sessions = "0.14"
tera = "1"
mime_guess = "2"
serde_json = "1"
time = "0.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
bytes = "1"
