[package]
name = "mud-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { workspace = true, features = ["cookies", "json"] }
serde_json = { workspace = true }
tempfile = "3"
