[package]
name = "mud-mop"
version = "0.1.0"
edition = "2021"

[dependencies]
mud-core = { path = "../mud-core" }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
